crates/demo_showcase/tests/snapshots/snapshot_tests__settings_80x24.snap
---
source: crates/demo_showcase/tests/snapshot_tests.rs
assertion_line: 267
expression: view
---
 Charmed Control Center   Connected                                    [Dark]  
  [] DashboardSettings                                                         
  >_ Services ────────────────────────────────────────────────────────────     
  >> Jobs                                                                      
   # Logs     ▸ Toggles                                                        
   ? Docs                                                                      
  <> Files    > [ ] Mouse Input (m)  Enable mouse clicks and sc                
   * Wizard     [ ] Animations (a)  Enable smooth transitions                  
>  @ Settings   [ ] ASCII Mode (c)  Use ASCII-only characters                  
                [x] Syntax Highlighting (s)  Highlight code in previews        
                                                                               
                Theme                                                          
                                                                               
                ● Dark   Pri  Ok  !!  Err  Inf                                 
                ○ Light   Pri  Ok  !!  Err  Inf                                
                ○ Dracula   Pri  Ok  !!  Err  Inf                              
                                                                               
                Keybindings Reference                                          
                                                                               
                Global                                                         
                           ?  Toggle help overlay                              
                           q  Quit application                                 
                         Esc  Close modal/cancel                               
                         1-8  Navigate to page                                 
                         Tab  Cycle focus/section                              
                       j / ↓  Move down                                        
                       k / ↑  Move up                                          
                           g  Go to top                                        
                           G  Go to bottom                                     
                       Enter  Confirm/activate                                 
                      Ctrl+C  Copy to clipboard                                
                           /  Search (in page)                                 
                                                                               
                Page-Specific                                                  
                           r  Dashboard: Refresh data                          
                       Enter  Dashboard: Open details                          
                           n  Jobs: Create new job                             
                           x  Jobs: Cancel selected                            
                       Enter  Jobs: View details                               
                           f  Logs: Toggle follow                              
                           e  Logs: Export to file                             
                           c  Logs: Clear logs                                 
                         n/N  Docs: Next/prev match                            
                           s  Docs: Toggle syntax                              
                       Enter  Files: Open preview                              
                   Backspace  Files: Go up directory                           
                                                                               
                Note: Keybindings are currently read-only. Customization coming
                                                                               
                About + Diagnostics                                            
                                                                               
                  charmed_rust  v0.2.4                                         
                                                                               
                  Terminal: [TERM] | [WxH]                                     
                  Features:  syntax                                            
                                                                               
                                                                               
                  Actions:                                                     
                      [d] Copy to file (exports diagnostics)                   
                      [p] Open in pager (opens in $PAGER)                      
                                                                               
                  Press Enter to execute, or c/p for shortcuts                 
                                                                               
              ────────────────────────────────────────────────────────────     
              Theme: Dark  |  ○ Mouse Input  ○ Animations  ○ ASCII Mode  ● Synt
  Tab section  j/k nav  Space/Enter toggle  m/a/c/s direct  |  1-7 pages  [    
sidebar  ? help  q quit
